--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title>FREE BEER</title>
+<title>1 FREE BEER</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="index.css?1.1">
 <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
