--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
 <div id="outer">
     <section>
-        <h1>Free Snuggles and Hugs</h1>
+        <h1>Free Hugs and Snuggles</h1>
     </section>
 </div>
